Adds printed receipts to cargo request console, more setup code for the cartridge, fixes the debug assertion crash when inserting spesos

--- a/Content.Client/CartridgeLoader/Cartridges/CargoOrderTrackerUiFragment.xaml
+++ b/Content.Client/CartridgeLoader/Cartridges/CargoOrderTrackerUiFragment.xaml
@@ -19,6 +19,6 @@
         <ScrollContainer VerticalExpand="True" HScrollEnabled="True">
             <BoxContainer Orientation="Vertical" Name="TrackedOrdersContainer"/>
         </ScrollContainer>
-        <LineEdit Name="Input" HorizontalExpand="True" SetHeight="32"/>
+        <LineEdit Name="Input" HorizontalExpand="True" SetHeight="32" PlaceHolder="{Loc cargo-order-tracker-input-placeholder}"/>
     </BoxContainer>
 </cartridges:CargoOrderTrackerUiFragment>
